Fix alignment of rockstar image

--- a/kdp-frontend/src/styles/main.scss
+++ b/kdp-frontend/src/styles/main.scss
@@ -76,3 +76,9 @@ p {
 .page-title {
   margin-left: 20px;
 }
+
+.profile-tag {
+  display: flex;
+  flex-flow: column;
+  align-items: center
+}
